--- a/SDL-test.cbp
+++ b/SDL-test.cbp
@@ -14,6 +14,9 @@
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
+				<Linker>
+					<Add option="-lSDL2" />
+				</Linker>
 			</Target>
 			<Target title="Release">
 				<Option output="bin/Release/SDL-test" prefix_auto="1" extension_auto="1" />
