--- a/SDL-test.cbp
+++ b/SDL-test.cbp
@@ -33,7 +33,7 @@
 			<Add option="`sdl-config --cflags`" />
 		</Compiler>
 		<Linker>
-			<Add option="-lSDL2" />
+			<Add option="-lSDL2 -lSDL2_image -lSDL2_ttf" />
 		</Linker>
 		<Unit filename="cb.bmp" />
 		<Unit filename="main.cpp" />
